--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
-@import "~@angular/material/prebuilt-themes/purple-green.css";
+//@import "~@angular/material/prebuilt-themes/purple-green.css";
+//@import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+
+.text-center {
+  text-align: center;
+}
+
+body,html {
+  height: 100%;
+}
