Svg background, fuddesk styles and logo.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,6 @@
     <button [routerLink]="['/about']" mat-button>About site</button>
   </nav>
 </mat-toolbar>
-
-
-<router-outlet></router-outlet>
+<div class="router-container">
+  <router-outlet></router-outlet>
+</div>
