--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,15 @@
 mat-toolbar {
   display: block;
   vertical-align: middle;
+  position: fixed;
+  top: 5px;
+  left: 0;
+  width: 100%;
+  z-index: 9;
+}
+
+.router-container {
+  width: 100%;
+  height: calc(100% - 100px);
+  padding-top: 100px;
 }
