--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,4 +10,5 @@ body,html {
   height: 100%;
   background: url(/assets/images/bg.svg) center no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 }
