Fuds Sidenav test.

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,5 +1,7 @@
 .fud-list {
-  text-align: center;
+  text-align: left;
+  max-width: 1040px;
+  margin: 0 auto;
 
   .fuddesk-logo {
     background-color: #fff;
