--- a/src/app/components/fud-view/fud-view.component.html
+++ b/src/app/components/fud-view/fud-view.component.html
@@ -1,3 +1,22 @@
-<p *ngIf="fud">
-  {{fud.title}}
-</p>
+<mat-sidenav-container style="height: 100%">
+  <mat-sidenav #sidenav mode="side" [(opened)]="showSideNav">
+    <ng-container *ngFor="let fud of fudsList">
+      <a [routerLink]="['/'+fud.url]">
+        <p>{{fud.title}}</p>
+
+        <p>
+          {{fud.excerpt}}
+        </p>
+      </a>
+    </ng-container>
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+    <!--<p>-->
+    <!--<button mat-button (click)="sidenav.toggle()">sidenav.toggle()</button>-->
+    <!--</p>-->
+    <div class="example-events">
+      {{fud.title}}
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
