--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 //@import "~@angular/material/prebuilt-themes/purple-green.css";
 //@import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900&subset=latin-ext');
 
 .text-center {
   text-align: center;
@@ -8,7 +9,18 @@
 
 body,html {
   height: 100%;
+}
+
+body {
   background: url(/assets/images/bg.svg) center no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  font-family: 'Lato', sans-serif;
+
+  h2 {
+    color: #323232;
+    text-align: center;
+  }
 }
+
+
