--- a/src/app/components/fud-view/fud-view.component.html
+++ b/src/app/components/fud-view/fud-view.component.html
@@ -1,22 +1,15 @@
-<mat-sidenav-container style="height: 100%">
-  <mat-sidenav #sidenav mode="side" [(opened)]="showSideNav">
+<div class="fud-view container">
+  <div class="fud-list">
     <ng-container *ngFor="let fud of fudsList">
       <a [routerLink]="['/'+fud.url]">
         <p>{{fud.title}}</p>
-
         <p>
           {{fud.excerpt}}
         </p>
       </a>
     </ng-container>
-  </mat-sidenav>
-
-  <mat-sidenav-content>
-    <!--<p>-->
-    <!--<button mat-button (click)="sidenav.toggle()">sidenav.toggle()</button>-->
-    <!--</p>-->
-    <div class="example-events">
-      {{fud.title}}
-    </div>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+  </div>
+  <div class="fud-details">
+    {{fud.title}}
+  </div>
+</div>
