--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,27 +1,17 @@
-<div class="fud-list">
+<div class="fud-list container">
   <div class="fuddesk-logo">
   </div>
   <h2>fuddesk</h2>
   <ng-container *ngFor="let fud of fudsList">
     <a [routerLink]="[fud.url]">
-      <mat-card
-        class="fud-card"
-      >
-        <mat-card-header>
-          <!--<div mat-card-avatar class="example-header-image"></div>-->
-          <mat-card-title>{{fud.title}}</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-        </mat-card-header>
-        <!--<img mat-card-image [src]="fud.photo" alt="Photo of a fud">-->
+      <mat-card class="fud-card">
         <mat-card-content>
+          <p class="text-center">{{fud.title}}</p>
           <p>
             {{fud.excerpt}}
           </p>
+          <p class="not-true text-center">NOT TRUE!</p>
         </mat-card-content>
-        <!--<mat-card-actions>-->
-          <!--<button mat-button>LIKE</button>-->
-          <!--<button mat-button>SHARE</button>-->
-        <!--</mat-card-actions>-->
       </mat-card>
     </a>
   </ng-container>
