Main menu link active class.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,16 @@
 <mat-toolbar>
   <nav>
     <button [routerLink]="['/']" mat-button>XRP <img src="assets/images/100_emoji.png" height="30px "></button>
-    <button [routerLink]="['/']" mat-button>FudDesk</button>
-    <button [routerLink]="['/partners']" mat-button>Partners</button>
-    <button [routerLink]="['/about']" mat-button>About site</button>
+    <button
+      routerLinkActive="mat-raised-button"
+      [routerLinkActiveOptions]="{exact:true}"
+      [routerLink]="['/']"
+      mat-button
+    >
+      FudDesk
+    </button>
+    <button routerLinkActive="mat-raised-button" [routerLink]="['/partners']" mat-button>Partners</button>
+    <button routerLinkActive="mat-raised-button" [routerLink]="['/about']" mat-button>About site</button>
   </nav>
 </mat-toolbar>
 <div class="router-container">
