--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="fud-list container">
   <div class="fuddesk-logo">
   </div>
-  <h2>fuddesk</h2>
+  <h2>FudDesk</h2>
   <ng-container *ngFor="let fud of fudsList">
     <a [routerLink]="[fud.url]">
       <mat-card class="fud-card">
