--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <nav>
-    <button [routerLink]="['/']" mat-button>XRP <img src="assets/images/100_emoji.png" height="30px "></button>
+    <button [routerLink]="['/']" mat-button>XRP <img src="assets/images/100_emoji.png" height="30px "> | #0doubt</button>
     <button
       routerLinkActive="mat-raised-button"
       [routerLinkActiveOptions]="{exact:true}"
