--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
       <mat-card class="fud-card">
         <mat-card-content>
           <p class="text-center">{{fud.title}}</p>
-          <p>
+          <p class="fud-title">
             {{fud.excerpt}}
           </p>
           <p class="not-true text-center">NOT TRUE!</p>
