--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,11 +13,23 @@ body,html {
 }
 
 body {
-  background: url(/assets/images/bg.svg) center no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
   font-family: 'Lato', sans-serif;
   overflow: hidden;
+  background: #fff;
+
+  &:after {
+    content: "";
+    background: url(/assets/images/bg.svg) center no-repeat;
+    opacity: 0.8;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
+    background-size: cover;
+    background-attachment: fixed;
+  }
 
   h2 {
     color: #323232;
