--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,7 +19,7 @@ body {
 
   &:after {
     content: "";
-    background: url(/assets/images/bg.svg) center no-repeat;
+    //background: url(/assets/images/bg.svg) center no-repeat;
     opacity: 0.8;
     top: 0;
     left: 0;
