dungeons of fud link added, changes before deploy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,12 @@
     >
       FudDesk
     </button>
+    <a href="http://dungeonsoffud.xrp100.net" target="_blank">
+      <button mat-button>Play Dungeons of Fud</button>
+    </a>
     <button routerLinkActive="active-route" [routerLink]="['/partners']" mat-button>Partners</button>
     <button routerLinkActive="active-route" [routerLink]="['/about']" mat-button>About site</button>
+
   </nav>
 </mat-toolbar>
 <div class="router-container">
