--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,3 +1,5 @@
-<p>
-  about works!
-</p>
+<div class="container" style="background: #fff">
+  <p>This website was created to support Ripple, XRP project and help <a href="https://twitter.com/hashtag/xrpcommunity"
+                                                         target="_blank">#xrpcommunity</a> to fight against FUDs about XRP.
+  </p>
+</div>
