--- a/src/app/components/partners/partners.component.html
+++ b/src/app/components/partners/partners.component.html
@@ -1,1 +1,6 @@
-<iframe src="https://docs.google.com/spreadsheets/d/1E1AcLBd_ykemoDAPwZsbl5f2wyrS7RhlAt94CrHXTAg/edit?rm=minimal"></iframe>
+<div style="background: #fff; padding: 5px;">
+  This page load a spreadsheet created by <strong><a href="http://rppl.info/" target="_blank">http://rppl.info/</a></strong>
+</div>
+<iframe
+  src="https://docs.google.com/spreadsheets/d/1E1AcLBd_ykemoDAPwZsbl5f2wyrS7RhlAt94CrHXTAg/edit?rm=minimal"></iframe>
+
